# authkit-cli

./: Cargo.toml  README.md  authkit.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  database.rs  error.rs  main.rs
src/commands/: destroy.rs  generate.rs  init.rs  migrate.rs  mod.rs  schema.rs  status.rs
src/migrations/: mod.rs  runner.rs
src/migrations/postgres/: 001_create_users_table.up.sql  002_create_sessions_table.up.sql  003_create_tokens_table.up.sql  004_create_users_email_index.down.sql  005_create_sessions_user_id_index.down.sql  005_create_sessions_user_id_index.up.sql  006_create_sessions_expires_at_index.down.sql  007_create_tokens_user_id_index.down.sql  007_create_tokens_user_id_index.up.sql  008_create_tokens_hash_index.down.sql  008_create_tokens_hash_index.up.sql  009_create_tokens_expires_at_index.down.sql  009_create_tokens_expires_at_index.up.sql  010_create_tokens_type_index.down.sql  010_create_tokens_type_index.up.sql
src/migrations/sqlite/: 001_create_users_table.up.sql  002_create_sessions_table.up.sql  003_create_tokens_table.up.sql  004_create_indexes.down.sql  004_create_indexes.up.sql
src/schema/: mod.rs
src/schema/features/: base.rs  email_verification.rs  mod.rs
tests/: integration_postgres.rs  integration_sqlite.rs
