[package]
name = "authkit-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Akshay B <akshay2642005@gmail.com>"]
description = "CLI tool for AuthKit database schema management"
documentation = "https://docs.rs/authkit-cli"
repository = "https://github.com/Akshay2642005/authkit-cli"
homepage = "https://github.com/Akshay2642005/authkit-cli"
readme = "README.md"
keywords = ["authentication", "database", "migrations", "cli", "schema"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "authkit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "tls-rustls"], default-features = false }

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI UX
colored = "2"
dialoguer = "0.11"
tabled = "0.15"
indicatif = "0.17"

# Utilities
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
